Minor UI fixes
3rd column scrollbar appears on hover now. And no browser scrollbar
appears till the modal is too big. Earlier browser scrollbar used to
appear as soon as modal was opened.

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -3,6 +3,13 @@ body {
 	font-size: 13px;
 }
 
+.modal {
+    overflow-y: auto;
+}
+
+.modal-open {
+    overflow: auto;
+}
 
 #dd-workspace-wrapper{
 	padding-left: 5px;
@@ -231,6 +238,7 @@ ul.fancytree-container {
 	left: 50%; 
 	height: 100%; 
 	overflow-y: hidden;
+	position: fixed;
 }
 
 .rf-col-1:hover, .rf-col-2:hover, .rf-col-3:hover{
